[tool.poetry]
name = "laser-spot-detector"
version = "0.1.0"
description = "A Laser Spot Detection Based on Boundary Point Set in Complex Indoor Scenes"
authors = ["Yuxue Yang <yuppie898988@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.1"
joblib = "^1.2.0"
Pillow = "^9.4.0"
torch = "^1.13.1"
opencv-python = "^4.7.0.68"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
torchvision = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
